docs/iconstate-build.log
[0;36m==> [1;39mCleaning…[m
[1;31m> [1;3;39mMaking clean in Tweak…[m
[0;36m==> [1;39mCleaning…[m
[0;36m==> [1;36mNotice:[m Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
[1;31m> [1;3;39mMaking all in Tweak…[m
[0;36m==> [1;36mNotice:[m Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
[1;31m> [1;3;39mMaking all for tweak IconState…[m
[0;31m==> [1;39mPreprocessing Tweak.xm…[m
[0;32m==> [1;39mCompiling Tweak.xm (arm64)…[m
[1mTweak.xm:6:5: [0m[0;1;31merror: [0m[1munknown type name 'NSUserDefaults'[0m
    NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
[0;1;32m    ^
[0m[1mTweak.xm:6:33: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'NSUserDefaults'[0m
    NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
[0;1;32m                                ^
[0m[1mTweak.xm:17:5: [0m[0;1;31merror: [0m[1munknown type name 'NSUserDefaults'[0m
    NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
[0;1;32m    ^
[0m[1mTweak.xm:17:33: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'NSUserDefaults'[0m
    NSUserDefaults *defaults = [NSUserDefaults standardUserDefaults];
[0;1;32m                                ^
[0m4 errors generated.
make[4]: *** [/Users/runner/work/phonerepo/phonerepo/IconState/.theos/obj/arm64/Tweak.xm.434c6753.o] Error 1
rm /Users/runner/work/phonerepo/phonerepo/IconState/.theos/obj/arm64/Tweak.xm.mm
make[3]: *** [/Users/runner/work/phonerepo/phonerepo/IconState/.theos/obj/arm64/IconState.dylib] Error 2
make[2]: *** [internal-library-all_] Error 2
make[1]: *** [IconState.all.tweak.variables] Error 2
make: *** [internal-all] Error 2
